--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
 	"name": "@mkfizi/starter-html",
-	"version": "0.1.0",
-	"description": "Boilerplate for HTML and TailwindCSS projects.",
-	"keywords": [
-		"Tailwindcss",
-		"Starter Kit",
-		"Boilerplate"
-	],
+	"version": "0.2.0",
+	"description": "Starter kit for HTML and TailwindCSS projects.",
 	"license": "MIT",
-	"author": "@mkfizi",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -16,8 +10,9 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@tailwindcss/vite": "^4.0.10",
-		"tailwindcss": "^4.0.10",
-		"vite": "^6.2.1"
+		"@tailwindcss/vite": "^4.1.13",
+		"glob": "^11.0.3",
+		"typescript": "~5.9.2",
+		"vite": "^7.1.7"
 	}
 }
